Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-16713

Hangs server with repeating log entry

    XMLWordPrintable

Details

    Description

      Works on 10.2.14 but hangs on 10.2.15 and 10.3.8 with repeating log entry:

      [ERROR] InnoDB: Trying to read doublewrite buffer page [page id: space=0, page number=134]
      

      Must kill -9 server

      To reproduce, run following test case on fresh install of MariaDB server:

      CREATE SCHEMA IF NOT EXISTS test;
      USE test;
       
      DROP PROCEDURE IF EXISTS foo;
      DELIMITER $$
       
      CREATE PROCEDURE foo()
      BEGIN
       
        DECLARE var INT UNSIGNED;
        
        DROP TEMPORARY TABLE IF EXISTS bar;
        CREATE TEMPORARY TABLE bar( i1 INT UNSIGNED, i2 INT UNSIGNED, KEY( i1, i2 ) );
       
        SET TRANSACTION ISOLATION LEVEL READ COMMITTED;
        
        START TRANSACTION;
       
        INSERT INTO bar SET i1 = 1, i2 = 1;
       
        UPDATE bar SET i2 = 2;
       
        SET var = ( SELECT 1 FROM bar );
       
      END
      $$
       
      DELIMITER ;
       
      CALL foo;
      

      Attachments

        Issue Links

          Activity

            People

              thiru Thirunarayanan Balathandayuthapani
              Rich Rich Theobald
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.5d
                  0.5d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.