MDEV-16713	Hangs server with repeating log entry

At most one transaction can be active at a time for temporary
tables. There is no need to check previous version of record for the
temporary tables.